objects/Unique_Email_Relationships__c.object
<CustomObject>
    <label>Unique Email Relationships</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Unique Email Relationships Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Unique Email Relationships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Unique Email Relationships</relationshipLabel>
        <relationshipName>Unique_Email_Relationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Unique_Email__c</fullName>
        <label>Unique Email</label>
        <referenceTo>Unique_Email__c</referenceTo>
        <relationshipLabel>Unique Email Relationships</relationshipLabel>
        <relationshipName>Unique_Email_Relationships</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Email_Out_of_Sync__c</fullName>
        <formula>IF( OR(ISNULL(Contact__r.Email),( Contact__r.Email !=  Unique_Email__r.Name ))  , TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email Out of Sync</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>